--- a/agil samlad/w-style.css
+++ b/agil samlad/w-style.css
@@ -32,3 +32,16 @@ button {
     box-shadow: 4px 4px 4px 0px #37005e;
     cursor: pointer;
 }
+
+    header{
+        display: flex;
+        justify-content: space-between;
+    }
+    header a{
+        font-size: 3em;
+        color: #FF00C7;
+        text-decoration: none;
+    }
+    header a:hover {
+        opacity: 0.7;
+    }
