--- a/agil samlad/w-style.css
+++ b/agil samlad/w-style.css
@@ -13,11 +13,14 @@ section {
 article {
     background-color: white;
     font-size: 24px;
-    font-weight: bold;
+    /* font-weight: bold;  BORT*/
     width: 40%;
     text-align: center;
     padding: 50px 80px;
     box-shadow: 4px 4px 4px 0px #37005e;
+    
+    /* tillägg */
+    border-radius: 10px;
 }
 
 button {
@@ -25,12 +28,15 @@ button {
     color: #37005e;
     font-family: 'Gloria Hallelujah', cursive;
     font-size: 24px;
-    font-weight: bold;
-    
+    font-weight: bold;    
     padding: 50px;
     margin-top: 100px;
     box-shadow: 4px 4px 4px 0px #37005e;
     cursor: pointer;
+    
+    /* tillägg */    
+    border:none;
+    border-radius: 10px;
 }
 
     header{
